test/expected/cast_typedef_i.out
cast x into typedef int
            ^
13: error: can not cast into "typedef"
